# PPT-Generator

./: README.md  app.py  pyproject.toml  requirements.txt
src/edu_flow_v2/: main.py
src/edu_flow_v2/crews/researchers/: researchers.py
src/edu_flow_v2/crews/researchers/config/: agents.yaml  tasks.yaml
src/edu_flow_v2/crews/writers/: writers.py
src/edu_flow_v2/crews/writers/config/: agents.yaml  tasks.yaml
src/edu_flow_v2/tools/: link_validator.py
