[project]
name = "edu_flow_v2"
version = "0.1.0"
description = "edu_flow_v2 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0",
    "google-api-python-client>=2.160.0",
    "google-auth-oauthlib>=1.2.1",
    "langtrace-python-sdk>=3.3.21",
    "streamlit>=1.41.1",
    "utils>=1.0.2",
]

[project.scripts]
kickoff = "edu_flow_v2.main:kickoff"
plot = "edu_flow_v2.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
